src/main/resources/sf-resource/SfServerPkgs/objects/DeployMetadata__c.object
<CustomObject>
    <fields>
        <fullName>DeployedDateTime__c</fullName>
        <label>DeployedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MetadataLog__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MetadataLog</label>
        <referenceTo>MetadataLog__c</referenceTo>
        <relationshipLabel>Metadata Log</relationshipLabel>
        <relationshipName>DeployMetadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrganizationId__c</fullName>
        <label>OrganizationId</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package__c</fullName>
        <label>Package</label>
        <referenceTo>Package__c</referenceTo>
        <relationshipLabel>DeployMetadata</relationshipLabel>
        <relationshipName>Package</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release</label>
        <referenceTo>Releases__c</referenceTo>
        <relationshipLabel>DeployMetadata</relationshipLabel>
        <relationshipName>DeployMetadata</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RequestedDateTime__c</fullName>
        <label>RequestedDateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SourceOrganizationId__c</fullName>
        <label>SourceOrganizationId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>CustomApplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AppMenu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AssignmentRules</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AutoResponseRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomField</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomLabels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomObject</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EscalationRule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HomePageLayout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ListView</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Profile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QuickAction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RemoteSiteSetting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Role</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WebLink</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>DeployMetadata</label>
    <listViews>
        <fullName>All</fullName>
        <columns>MetadataLog__c</columns>
        <columns>Order__c</columns>
        <columns>Name__c</columns>
        <columns>Type__c</columns>
        <columns>OrganizationId__c</columns>
        <columns>Package__c</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DM-{0000000}</displayFormat>
        <label>DeployMetadata Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DeployMetadata</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>